tests/fixtures/type_checker/error/function_parameter_ref_func.galaxy
native void     Wait (fixed inSecs, int inTimeType);

void name_func(int Wait);
// ^ERR: e_expectedParams=Invalid parameter list
// (Because `Wait` clashes with existing function)
